--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
                 <div class="column {{ content_width }}">
                     {% include tabs.html %}
                     {% include showcase.html %}
-                    {% include sponsors.html %}
+                    <!-- {% include sponsors.html %} -->
                     {% include gallery.html %}
                     {{ content }}
                 </div>
